# WaveController_Final

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  main.py
wave/: CMakeLists.txt
wave/Audio/: CMakeLists.txt
wave/Audio/inc/: AudioGenerator.h  AudioRecorder.h  Buffer.h
wave/Audio/src/: AudioGenerator.cpp  AudioRecorder.cpp  Buffer.cpp
wave/Common/: CMakeLists.txt
wave/Common/inc/: Constants.h  Timer.h
wave/Common/src/: Timer.cpp
wave/GUI/: CMakeLists.txt
wave/GUI/inc/: HarmonicControlPanel.h  SynthVisualizationWindow.h  WaveForm.h
wave/GUI/src/: HarmonicControlPanel.cpp  SynthVisualizationWindow.cpp  WaveForm.cpp
wave/HandTracker/: CMakeLists.txt
wave/HandTracker/inc/: WaveController.h
wave/HandTracker/src/: WaveController.cpp
wave/Visualization/: CMakeLists.txt
wave/Visualization/inc/: KissFFTAnalyzer.h  SpectrumAnalyzer.h
wave/Visualization/src/: KissFFTAnalyzer.cpp  SpectrumAnalyzer.cpp
